# image_categorizer

./: .gitmodules  Dockerfile  README.md  docker_build.sh  docker_run.sh
application/resources/: config.json
application/src/: main.cpp  misc.cpp  misc.h
categorizer/: CMakeLists.txt
